syntax = "proto3";

package mir;

option java_package = "io.improbable.mir";
option java_outer_classname = "MIR";

import "io/improbable/mir/BayesNet.proto";

enum VersionNumber {
    VERSION_1 = 0;
}

message Model {
    string name = 1;
    string entry_point_name = 2;
    map<string, Function> functions_by_name = 3;
    ModelProperties properties = 4;
}

message ModelProperties {
    VersionNumber mir_version = 1;
    repeated Metadata metadata = 2;
    CycleMetadata loop_metadata = 3;
    CycleMetadata recursion_metadata = 4;
    repeated RecursiveTrace recursive_traces = 5;
    bool dynamic_collections = 6;
}

message CycleMetadata {
    IterationType iteration = 1;
    bool dimension_generating = 2;
    uint64 max_iterations = 3;
}

message RecursiveTrace {
    repeated string function_names = 1;
    CycleMetadata cycle_metadata = 2;
}

message Function {
    string name = 1;
    repeated Placeholder inputs = 2;
    repeated InstructionGroup instruction_groups = 3;
    repeated VertexID outputs = 4;
    repeated Metadata metadata = 5;
}

message Placeholder {
    VertexID id = 1;
    DataType type = 2;
    string label = 3;
    repeated Metadata metadata = 4;
}

message InstructionGroup {
    uint64 id = 1;
    oneof body {
        Graph graph = 2;
        Loop loop = 3;
        Call call = 4;
    }
    repeated Metadata metadata = 6;
}

message Loop {
    repeated Placeholder iteration_inputs = 1;
    repeated VertexID initial_values = 2;
    repeated InstructionGroup condition = 3;
    repeated InstructionGroup body = 4;
    VertexID is_still_looping = 5;
    repeated VertexID outputs = 6;
    CycleMetadata cycle_metadata = 7;
}

message Call {
    string model_name = 1;
    string function_name = 2;
    repeated VertexID inputs = 3;
    repeated Placeholder outputs = 4;
}

message PartialDerivativeMatrix {
    repeated PartialDerivatives output_partial_derivatives = 1;
}

message PartialDerivatives {
    repeated bool partial_derivatives = 1;
}

enum IterationType {
    NONE = 0;
    DETERMINISTIC = 1;
    INPUT_CONDITIONED = 2;
    PROBABILISTIC = 3;
}
